# ich-brauche-eine

./: .env.template  .gitignore  CONTEXT_BACKEND.md  CONTEXT_FRONTEND.md  CONTEXT_OPS.md  Cargo.toml  Dockerfile  PROJECT_STATUS.md  SECURITY.md  SECURITY_REPORT.md  SPEC.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy-only.yml  deploy.yml
crates/app/: Cargo.toml  build.rs
crates/app/src/: main.rs
crates/app/src-tauri/: Cargo.toml  tauri.conf.json
crates/app/src-tauri/capabilities/: default.json
crates/app/src-tauri/src/: main.rs
crates/backend/: Cargo.toml
crates/backend/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  middleware.rs
crates/backend/src/routes/: health.rs
crates/backend/src/routes/api/: drink_types.rs  drinks.rs  mod.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html  style.css
crates/frontend/src/: main.rs
crates/ui/: Cargo.toml
crates/ui/src/: api.rs  app.rs  auth.rs  lib.rs  routes.rs  types.rs  utils.rs
crates/ui/src/components/: drink_button.rs  log_entry.rs  mod.rs  modal.rs  nav.rs  progress_bar.rs
crates/ui/src/pages/: history.rs  home.rs  login.rs  mod.rs  not_found.rs  register.rs  settings.rs
db/: schema.sql  seed.sql
tests/: smoke.sh
tools/csv_import/: Cargo.toml
tools/csv_import/src/: main.rs
