[package]
name = "app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tauri = { version = "2", features = [] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ui = { path = "../ui" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"

# Prevents a separate `app` window from opening in dev
[profile.release]
panic = "abort"
codegen-units = 1
