[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { workspace = true }
tracing = { workspace = true }

yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.5", features = ["http"] }
gloo-storage = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
tracing-wasm = "0.2"
uuid = { version = "1", features = ["v4", "serde", "js"] }
